KeycloakBulkClientRoleAdder: Refactor with ProcessingContext.